--- a/tienda/src/App.css
+++ b/tienda/src/App.css
@@ -55,6 +55,8 @@
 
 
 
+
+
 /* Estilos NewUserForm */
 
 /* Estilos generales */
@@ -109,7 +111,8 @@ form {
   outline: none;
 }
 
-/* Estilo para el botón de envío */
+/* Estilo BOTON */
+/* Estilo para el botón de envío y para el botón de añadir al carrito */
 .btn {
   display: inline-block;
   padding: 10px 20px;
@@ -154,4 +157,49 @@ form {
     padding: 8px 16px;
     font-size: 14px;
   }
+}
+
+
+
+/* Estilo para el header */
+header {
+  background-color: #17a2b8; /* Color de fondo */
+  color: #fff; /* Color del texto */
+  padding: 20px 0; /* Espaciado interno */
+  text-align: center; /* Centra el texto */
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);  */
+  /* Sombra ligera */
+}
+
+/* Estilo para el título del header y catálogo de productos*/
+h1 {
+  font-size: 2.5rem; /* Tamaño del texto del título */
+  font-weight: bold; /* Negrita para el título */
+  margin: 0; /* Quita el margen predeterminado */
+  font-family: 'Arial', sans-serif; /* Tipografía del título */
+}
+
+/*Estilo para el titulo carrito*/
+h2 {
+  font-size: 2rem; /* Tamaño del texto del título carrito */
+  font-weight: bold; /* Negrita para el título carrito */
+  margin: 0; /* Quita el margen predeterminado */
+  font-family: 'Arial', sans-serif; /* Tipografía del título carrito */
+}
+
+/* Responsive: Ajusta el tamaño del texto en pantallas pequeñas */
+/* @media (max-width: 576px) {
+  header h1 {
+    font-size: 1.8rem; 
+  }
+} */
+
+/* Estilo para el carrito */
+.cart {
+  margin-top: 20px;
+  padding: 20px;
+  /* background-color: #f7f7f7; */
+  background-color: #17a2b8;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
